Evaluating validity of training approximations

--- a/tuxiv.conf
+++ b/tuxiv.conf
@@ -1,5 +1,5 @@
 entrypoint:
-   - CUDA_VISIBLE_DEVICES="0,1,2,3,4,5,6,7" python3 ${TACC_WORKDIR}/train_ffcv.py --cfg_path ./configs/conf_tacc.cfg
+   - CUDA_VISIBLE_DEVICES="0,1,2,3,4,5,6,7" python3 ${TACC_WORKDIR}/train_nmodels.py --cfg_path ./configs/conf_tacc.cfg
    
 environment:
     name: ffcv-env2
@@ -24,4 +24,4 @@ job:
       - ntasks-per-node=4
       - cpus-per-task=10
       - gres=gpu:4
-      #- nodelist=10-0-3-[11,13]
+      #- nodelist=10-0-8-19
