--- a/configs/conf_local.cfg
+++ b/configs/conf_local.cfg
@@ -18,14 +18,14 @@ in_memory = True
 [trainval]
 epochs = 16
 train_batch_size = 256
-val_batch_size = 128
+val_batch_size = 512
 val_resolution = 256
-lr_tta = False
-min_res = 160
-max_res = 192
+lr_tta = True
+min_res = 224
+max_res = 224
 start_ramp = 11
 end_ramp = 13
-seed = 2
+seed = 24
 
 [optimizer]
 lr = 0.425
