--- a/configs/conf_tacc.cfg
+++ b/configs/conf_tacc.cfg
@@ -1,6 +1,6 @@
 [logging]
-save = /mnt/home/aahmadaa/USERDIR/
-note = eval-MB-3rep-bs=768-lr=0.8-fpga
+save = /mnt/home/aahmadaa1/USERDIR/
+note = efficientnet-b0-d=1-fast-ep16-bs512-160_192-lr=0.425-lrtta=True-plat=gpu
 report_freq = 100
 fast = False
 use_wandb = True
@@ -17,18 +17,18 @@ in_memory = True
 
 [trainval]
 epochs = 16
-train_batch_size = 768
-val_batch_size = 1024
+train_batch_size = 512
+val_batch_size = 256
 val_resolution = 256
-lr_tta = False
+lr_tta = True
 min_res = 160
 max_res = 192
 start_ramp = 11
 end_ramp = 13
-seed = 2
+seed = 24
 
 [optimizer]
-lr = 0.8
+lr = 0.425
 weight_decay = 1e-4
 lr_peak_epoch = 2
 
@@ -36,4 +36,3 @@ lr_peak_epoch = 2
 distributed = True
 cluster = tacc
 port = 35162
-
