--- a/configs/conf_local_exact.cfg
+++ b/configs/conf_local_exact.cfg
@@ -1,6 +1,6 @@
 [logging]
-save = local_ 
-note = efficientnet-b0-d=1-fast-ep16-bs512-160_192-lr=0.425-lrtta=False-plat=fpga
+save = None 
+note = correlation_analysis_EXACT_node1-seed2
 report_freq = 100
 fast = False
 use_wandb = True
@@ -16,16 +16,16 @@ num_workers = 12
 in_memory = True
 
 [trainval]
-epochs = 16
-train_batch_size = 512
+epochs = 100
+train_batch_size = 256
 val_batch_size = 512
 val_resolution = 256
 lr_tta = False
-min_res = 160
-max_res = 192
+min_res = 224
+max_res = 224
 start_ramp = 11
 end_ramp = 13
-seed = 24
+seed = 2
 
 [optimizer]
 lr = 0.425
