Begin training of dataset models

--- a/configs/conf_local.cfg
+++ b/configs/conf_local.cfg
@@ -1,6 +1,6 @@
 [logging]
-save = local_ 
-note = efficientnet-b0-d=1-fast-ep16-bs512-160_192-lr=0.425-lrtta=False-plat=fpga
+save = ./logs/ 
+note = junk
 report_freq = 100
 fast = False
 use_wandb = True
@@ -18,14 +18,14 @@ in_memory = True
 [trainval]
 epochs = 16
 train_batch_size = 512
-val_batch_size = 512
+val_batch_size = 256
 val_resolution = 256
 lr_tta = False
 min_res = 160
 max_res = 192
 start_ramp = 11
 end_ramp = 13
-seed = 24
+seed = 3
 
 [optimizer]
 lr = 0.425
