--- a/tuxiv.conf
+++ b/tuxiv.conf
@@ -1,5 +1,5 @@
 entrypoint:
-   - CUDA_VISIBLE_DEVICES="0,1,2,3,4,5,6,7" python3 ${TACC_WORKDIR}/train_nmodels_exact.py --cfg_path ./configs/conf_tacc_exact.cfg
+   - CUDA_VISIBLE_DEVICES="0,1,2,3,4,5,6,7" python3 ${TACC_WORKDIR}/train_nmodels_proxified.py --cfg_path ./configs/conf_tacc.cfg
    
 environment:
     name: ffcv-env2
@@ -20,8 +20,8 @@ environment:
 job:
     name: magp
     general:
-      - nodes=1
-      - ntasks-per-node=4
-      - cpus-per-task=10
-      - gres=gpu:4
+      - nodes=2
+      - ntasks-per-node=2
+      - cpus-per-task=12
+      - gres=gpu:2
       #- nodelist=10-0-8-19
