Saving before server downtime begins

--- a/configs/conf_local.cfg
+++ b/configs/conf_local.cfg
@@ -1,6 +1,6 @@
 [logging]
 save = ./logs/ 
-note = junk
+note = DATSET-COLLECTION-NODE7_rand-models-MBonly-seed103
 report_freq = 100
 fast = False
 use_wandb = True
@@ -25,7 +25,7 @@ min_res = 160
 max_res = 192
 start_ramp = 11
 end_ramp = 13
-seed = 3
+seed = 103
 
 [optimizer]
 lr = 0.425
