--- a/configs/conf_local.cfg
+++ b/configs/conf_local.cfg
@@ -1,9 +1,9 @@
 [logging]
 save = ./logs/ 
-note = DATSET-COLLECTION-NODE7_rand-models-MBonly-seed103
+note = DATSET-COLLECTION-NODE7_rand-models-FullSS-seed8001
 report_freq = 100
 fast = False
-use_wandb = True
+use_wandb = False
 
 [model]
 label_smoothing = 0.1
@@ -25,7 +25,7 @@ min_res = 160
 max_res = 192
 start_ramp = 11
 end_ramp = 13
-seed = 103
+seed = 8001
 
 [optimizer]
 lr = 0.425
@@ -35,5 +35,4 @@ lr_peak_epoch = 2
 [distributed]
 distributed = True
 cluster = local
-port = 31626
-
+port = 33119
