Adding TPU training scheme

--- a/configs/conf_tacc.cfg
+++ b/configs/conf_tacc.cfg
@@ -1,6 +1,6 @@
 [logging]
-save = /mnt/home/aahmadaa/USERDIR/
-note = DATSET-COLLECTION-NODE1_rand-models-FullSS-seed2001
+save = /mnt/home/aahmadaa1/USERDIR/
+note = junk
 report_freq = 100
 fast = False
 use_wandb = True
