Fixing TPU training hps

--- a/configs/conf_local.cfg
+++ b/configs/conf_local.cfg
@@ -1,6 +1,6 @@
 [logging]
 save = ./logs/ 
-note = DATSET-COLLECTION-NODE7_rand-models-FullSS-seed8001
+note = junk
 report_freq = 100
 fast = False
 use_wandb = False
@@ -16,7 +16,7 @@ num_workers = 12
 in_memory = True
 
 [trainval]
-epochs = 16
+epochs = 1
 train_batch_size = 512
 val_batch_size = 256
 val_resolution = 256
@@ -25,7 +25,7 @@ min_res = 160
 max_res = 192
 start_ramp = 11
 end_ramp = 13
-seed = 8001
+seed = 2
 
 [optimizer]
 lr = 0.425
