Semantic modifications to TPU train

--- a/configs/conf_tpu.cfg
+++ b/configs/conf_tpu.cfg
@@ -1,9 +1,9 @@
 [logging]
 save = ./logs/ 
-note = junk
+note = deploygpu-tpuv3-effnetb0-sig-silu-fixed-200ep-noema
 report_freq = 100
 fast = False
-use_wandb = False
+use_wandb = True
 
 [model]
 label_smoothing = 0.1
@@ -15,17 +15,17 @@ num_workers = 12
 in_memory = True
 
 [trainval]
-epochs = 2
+epochs = 200
 train_batch_size = 256
 val_batch_size = 256
-update_freq = 2
+update_freq = 1
 seed = 8001
 
 [optimizer]
-lr = 0.004
-weight_decay = 0.05
+lr = 0.064
+weight_decay = 1e-5
 min_lr = 0.000001
-warmup_epochs = 0
+warmup_epochs = 5
 
 [distributed]
 distributed = True
