Measuring throughput GPU for additional models

--- a/configs/conf_tacc.cfg
+++ b/configs/conf_tacc.cfg
@@ -1,6 +1,6 @@
 [logging]
 save = /mnt/home/aahmadaa1/USERDIR/
-note = junk
+note = throughput_3090-moremore
 report_freq = 100
 fast = False
 use_wandb = True
@@ -18,11 +18,11 @@ in_memory = True
 [trainval]
 epochs = 16
 train_batch_size = 512
-val_batch_size = 256
+val_batch_size = 128
 val_resolution = 256
 lr_tta = False
-min_res = 160
-max_res = 192
+min_res = 224
+max_res = 224
 start_ramp = 11
 end_ramp = 13
 seed = 2001
@@ -35,4 +35,4 @@ lr_peak_epoch = 2
 [distributed]
 distributed = True
 cluster = tacc
-port = 33111
+port = 39182
