Exact training using a single a100 :sob:

--- a/configs/conf_local_exact.cfg
+++ b/configs/conf_local_exact.cfg
@@ -10,15 +10,15 @@ label_smoothing = 0.1
 design = debug
 
 [dataloader]
-train_dataset = /home/aahmadaa/datasets/imagenet_ffcv/train_400_0.50_90.ffcv
-val_dataset = /home/aahmadaa/datasets/imagenet_ffcv/val_400_0.50_90.ffcv
+train_dataset = /home/aahmadaa/datasets/imagenet/
+val_dataset = /home/aahmadaa/datasets/imagenet/
 num_workers = 12
 in_memory = True
 
 [trainval]
 epochs = 100
-train_batch_size = 256
-val_batch_size = 512
+train_batch_size = 128
+val_batch_size = 256
 val_resolution = 256
 lr_tta = False
 min_res = 224
