Exact eval using a single A100 :sob:

--- a/configs/conf_local_exact.cfg
+++ b/configs/conf_local_exact.cfg
@@ -1,6 +1,6 @@
 [logging]
 save = None 
-note = correlation_analysis_EXACT_node1-seed2
+note = train_effnetb0_timm_450ep_bs384_lr024
 report_freq = 100
 fast = False
 use_wandb = True
@@ -10,30 +10,24 @@ label_smoothing = 0.1
 design = debug
 
 [dataloader]
-train_dataset = /home/aahmadaa/datasets/imagenet/
-val_dataset = /home/aahmadaa/datasets/imagenet/
-num_workers = 12
+train_dataset = /datasets/ILSVRC2012/non-symlinked
+val_dataset = /datasets/ILSVRC2012/non-symlinked
+num_workers = 8
 in_memory = True
 
 [trainval]
-epochs = 100
-train_batch_size = 128
-val_batch_size = 256
-val_resolution = 256
-lr_tta = False
-min_res = 224
-max_res = 224
-start_ramp = 11
-end_ramp = 13
+epochs = 450
+train_batch_size = 384
+val_batch_size = 384
 seed = 2
 
 [optimizer]
-lr = 0.425
-weight_decay = 1e-4
-lr_peak_epoch = 2
+lr = 0.024
+weight_decay = 1e-5
+min_lr = 0.000001
+warmup_epochs = 5
 
 [distributed]
 distributed = True
 cluster = local
 port = 31626
-
