Evaluating result of simulated search optim accuracy

--- a/configs/conf_local.cfg
+++ b/configs/conf_local.cfg
@@ -1,9 +1,9 @@
 [logging]
 save = ./logs/ 
-note = junk
+note = eval_grid-k0_recipetest-junk
 report_freq = 100
 fast = False
-use_wandb = False
+use_wandb = True
 
 [model]
 label_smoothing = 0.1
@@ -12,7 +12,7 @@ design = debug
 [dataloader]
 train_dataset = /home/aahmadaa/datasets/imagenet_ffcv/train_400_0.50_90.ffcv
 val_dataset = /home/aahmadaa/datasets/imagenet_ffcv/val_400_0.50_90.ffcv
-num_workers = 12
+num_workers = 8
 in_memory = True
 
 [trainval]
@@ -20,7 +20,6 @@ epochs = 1
 train_batch_size = 512
 val_batch_size = 256
 val_resolution = 256
-lr_tta = False
 min_res = 160
 max_res = 192
 start_ramp = 11
@@ -35,4 +34,4 @@ lr_peak_epoch = 2
 [distributed]
 distributed = True
 cluster = local
-port = 33119
+port = 33817
