Adding README.md. Maybe issue with train_nmodels_proxified.py

--- a/configs/conf_tacc.cfg
+++ b/configs/conf_tacc.cfg
@@ -3,7 +3,7 @@ save = /mnt/home/aahmadaa/USERDIR/
 note = train_effnetb0_proxified
 report_freq = 100
 fast = False
-use_wandb = True
+use_wandb = False
 
 [model]
 label_smoothing = 0.1
@@ -12,7 +12,7 @@ design = debug
 [dataloader]
 train_dataset = /mnt/home/aahmadaa/USERDIR/datasets/imagenet_ffcv/train_400_0.50_90.ffcv
 val_dataset = /mnt/home/aahmadaa/USERDIR/datasets/imagenet_ffcv/val_400_0.50_90.ffcv
-num_workers = 12
+num_workers = 8
 in_memory = True
 
 [trainval]
@@ -20,7 +20,6 @@ epochs = 16
 train_batch_size = 512
 val_batch_size = 512
 val_resolution = 256
-lr_tta = False
 min_res = 160
 max_res = 192
 start_ramp = 11
