--- a/configs/conf_local.cfg
+++ b/configs/conf_local.cfg
@@ -1,9 +1,9 @@
 [logging]
 save = ./logs/ 
-note = eval_grid-k0_recipetest-junk
+note = junk
 report_freq = 100
 fast = False
-use_wandb = True
+use_wandb = False
 
 [model]
 label_smoothing = 0.1
@@ -17,11 +17,11 @@ in_memory = True
 
 [trainval]
 epochs = 1
-train_batch_size = 512
-val_batch_size = 256
+train_batch_size = 128
+val_batch_size = 128
 val_resolution = 256
-min_res = 160
-max_res = 192
+min_res = 224
+max_res = 224
 start_ramp = 11
 end_ramp = 13
 seed = 2
@@ -32,6 +32,6 @@ weight_decay = 1e-4
 lr_peak_epoch = 2
 
 [distributed]
-distributed = True
+distributed = False
 cluster = local
 port = 33817
