Ablation-Comparison Against Tabular

--- a/configs/conf_local.cfg
+++ b/configs/conf_local.cfg
@@ -1,13 +1,13 @@
 [logging]
 save = ./logs/ 
-note = junk
+note = train_proxified_ablation1_4-1
 report_freq = 100
 fast = False
-use_wandb = False
+use_wandb = True
 
 [model]
 label_smoothing = 0.1
-design = debug
+activation_fn = relu
 
 [dataloader]
 train_dataset = /home/aahmadaa/datasets/imagenet_ffcv/train_400_0.50_90.ffcv
@@ -16,12 +16,12 @@ num_workers = 8
 in_memory = True
 
 [trainval]
-epochs = 1
-train_batch_size = 128
-val_batch_size = 128
+epochs = 16
+train_batch_size = 512
+val_batch_size = 512
 val_resolution = 256
-min_res = 224
-max_res = 224
+min_res = 160
+max_res = 192
 start_ramp = 11
 end_ramp = 13
 seed = 2
@@ -32,6 +32,6 @@ weight_decay = 1e-4
 lr_peak_epoch = 2
 
 [distributed]
-distributed = False
+distributed = True
 cluster = local
 port = 33817
