--- a/configs/conf_tacc.cfg
+++ b/configs/conf_tacc.cfg
@@ -3,11 +3,11 @@ save = /mnt/home/aahmadaa/USERDIR/
 note = train_effnetb0_proxified
 report_freq = 100
 fast = False
-use_wandb = False
+use_wandb = True
 
 [model]
 label_smoothing = 0.1
-design = debug
+activation_fn = relu
 
 [dataloader]
 train_dataset = /mnt/home/aahmadaa/USERDIR/datasets/imagenet_ffcv/train_400_0.50_90.ffcv
