--- a/configs/conf_tacc_exact.cfg
+++ b/configs/conf_tacc_exact.cfg
@@ -1,31 +1,30 @@
 [logging]
 save = /mnt/home/hfanah/USERDIR/
-note = albation1-mulseed6-seed15-exact
+note = train_proxified_ablation1_2
 report_freq = 100
 fast = False
 use_wandb = True
 
 [model]
 label_smoothing = 0.1
-design = debug
+activation_fn = relu
 
 [dataloader]
 train_dataset = /mnt/home/aahmadaa/USERDIR/datasets/imagenet_ffcv/train_400_0.50_90.ffcv
 val_dataset = /mnt/home/aahmadaa/USERDIR/datasets/imagenet_ffcv/val_400_0.50_90.ffcv
-num_workers = 12
+num_workers = 8
 in_memory = True
 
 [trainval]
-epochs = 50
-train_batch_size = 256
-val_batch_size = 256
+epochs = 16
+train_batch_size = 512
+val_batch_size = 512
 val_resolution = 256
-lr_tta = False
-min_res = 224
-max_res = 224
+min_res = 160
+max_res = 192
 start_ramp = 11
 end_ramp = 13
-seed = 15
+seed = 2
 
 [optimizer]
 lr = 0.425
