Performing ablation studies

--- a/configs/conf_local.cfg
+++ b/configs/conf_local.cfg
@@ -1,6 +1,6 @@
 [logging]
 save = ./logs/ 
-note = train_proxified_ablation1_4-1
+note = junk
 report_freq = 100
 fast = False
 use_wandb = True
@@ -18,13 +18,13 @@ in_memory = True
 [trainval]
 epochs = 16
 train_batch_size = 512
-val_batch_size = 512
+val_batch_size = 128
 val_resolution = 256
 min_res = 160
 max_res = 192
 start_ramp = 11
 end_ramp = 13
-seed = 2
+seed = 1
 
 [optimizer]
 lr = 0.425
@@ -32,6 +32,6 @@ weight_decay = 1e-4
 lr_peak_epoch = 2
 
 [distributed]
-distributed = True
+distributed = False
 cluster = local
 port = 33817
