--- a/tuxiv.conf
+++ b/tuxiv.conf
@@ -1,5 +1,5 @@
 entrypoint:
-   - CUDA_VISIBLE_DEVICES="0,1,2,3,4,5,6,7" python3 ${TACC_WORKDIR}/train_nmodels_proxified.py --cfg_path ./configs/conf_tacc.cfg
+   - CUDA_VISIBLE_DEVICES="0,1,2,3,4,5,6,7" python3 ${TACC_WORKDIR}/train_nmodels_exact.py --cfg_path ./configs/conf_tacc_exact.cfg
    
 environment:
     name: ffcv-env2
@@ -20,7 +20,7 @@ environment:
 job:
     name: magp
     general:
-      - nodes=2
-      - ntasks-per-node=2
+      - nodes=1
+      - ntasks-per-node=4
       - cpus-per-task=10
-      - gres=gpu:2
+      - gres=gpu:4
