--- a/configs/conf_local.cfg
+++ b/configs/conf_local.cfg
@@ -1,6 +1,6 @@
 [logging]
 save = ./logs/ 
-note = junk
+note = train_proxified_ablation1_seed1
 report_freq = 100
 fast = False
 use_wandb = True
@@ -32,6 +32,6 @@ weight_decay = 1e-4
 lr_peak_epoch = 2
 
 [distributed]
-distributed = False
+distributed = True
 cluster = local
 port = 33817
